--- a/app/src/main/res/layout/fragment_author.xml
+++ b/app/src/main/res/layout/fragment_author.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/_10sdp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.collection.CollectionFragment">
+    tools:context=".ui.category.author.AuthorFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_tab_author"
