--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:orientation="vertical"
+    android:padding="@dimen/_10sdp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.collection.CollectionFragment">
+    tools:context=".ui.category.CategoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_tab_collection"
+        android:id="@+id/rcv_tab_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
